--- a/style.css
+++ b/style.css
@@ -41,14 +41,16 @@ h2{
 
 /* 프로필 사진의 컨테이너 */
 #profile_pic{
-    width: 50px;
-    height: 50px;
+    width: 15vw;
+    height: 15vh;
 }
 
 /* 하이라이트 사진의 컨테이너 */
 .highlight_pic{
-    width: 35px;
-    height: 35px;
+    width: 10vw;
+    height: 10vh;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* 원형으로 만드려는 이미지 */
@@ -63,7 +65,7 @@ h2{
 /* 하이라이트 영역 grid 사용하여 정렬하기 */
 #highlight_area{
     display: grid;
-    grid-template-columns: 45px 45px 1fr;
+    grid-template-columns: 12vw 12vw 1fr;
 }
 
 .highlight{
@@ -81,18 +83,18 @@ h2{
     display: grid;
     grid-template-rows: 1fr 1fr;
 
-    height: 70px;
+    height: 15vw;
 }
 
 #id{
-    font-size: 18px;
+    font-size: 6vw;
     font-weight: 100;
 }
 
 button{
     height: 80%;
     width: 95%;
-    font-size: 10px;
+    font-size: 3vw;
     background-color: white;
     border: 1px solid gray;
     border-radius: 3px;
@@ -101,8 +103,9 @@ button{
 #top{
     display: grid;
     grid-template-columns: 4fr 7fr 4fr;
-    height: auto;
-    margin-bottom: 35px;
+    height: 10vw;
+    min-height: 10vw;
+    margin-bottom: 3vw;
     border-bottom: 0.1px solid gray;
 
     /* border: solid red; */
@@ -112,8 +115,9 @@ button{
     margin-left: auto;
     margin-right: auto;
 
+    width: 100%;
     height: 100%;
-    object-fit: contain;
+    /* object-fit: contain; */
     /* border: solid red; */
 }
 
@@ -125,7 +129,7 @@ button{
     background: rgb(250,250,250);
     border: 1px solid gray;
     border-radius: 3px;
-    font-size: 10px;
+    font-size: 3vw;
     font-weight: 100;
 }
 
@@ -133,19 +137,23 @@ button{
     text-align: center;
 }
 
-i{
-    font-size: 40px;
-    margin-top: 10px;
+#top i{
+    font-size: 4vw;
+    margin-top: 4vw;
 }
 
 #sub_icons{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     text-align: center;
-    font-size: 15px;
-    height: 60px;
+    font-size: 5vw;
+    height: 6vw;
 }
 
 .selected{
     border-bottom: 3px solid gray;
+}
+
+body{
+    font-size: 3vw;
 }
