--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ h2{
 /* 하이라이트 사진의 컨테이너 */
 .highlight_pic{
     width: 10vw;
-    height: 10vh;
+    height: 10vw;
     margin-left: auto;
     margin-right: auto;
 }
